Added everything except Day-2 and reference pics

--- a/Survey.html
+++ b/Survey.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <form id="dietForm" onsubmit="submitForm(event)">
-            <h1>Awareness of My Plate, Food Pyramid, and Compliance of Dietary Habits Real</h1>
+            <h1>Awareness of My Plate, Food Pyramid, and Compliance of Dietary Habits</h1>
 
             <!-- 1. Demographic Information -->
             <section>
@@ -309,7 +309,6 @@
                 </div>
             </section>
 
-            
             <!-- 5. Food Frequency Questionnaire -->
             <section>
                 <h2>V. Food Frequency Questionnaire</h2>
@@ -791,7 +790,7 @@
             <!-- 7. 24-Hour Meal Recall - Day 1 -->
             <section>
                 <h2>VII. 24-Hour Meal Recall - Day 1</h2>
-                <p><strong>Instructions:</strong>Please provide details for two non-consecutive days (e.g., Monday and Wednesday, or Tuesday and Thursday).The form below is for Day 1 - this can be yesterday or any recent day you remember clearly.Use the "Number of Items" adjuster to select how many different food items you consumed. This will generate that number of rows in the table.For each row, enter the name of the food item and select the appropriate quantity from the available options.</p>
+                <p><strong>Instructions:</strong> Please provide details for a recent day you remember clearly (e.g., yesterday). Use the "Number of Items" adjuster to select how many different food items you consumed. This will generate that number of rows in the table. For each row, enter the name of the food item and select the appropriate quantity from the available options.</p>
                 <div class="form-group">
                     <label for="day1Date">Select Date for Day 1 (up to yesterday):</label>
                     <input type="date" id="day1Date" name="day1Date">
@@ -928,5 +927,6 @@
         </form>
     </div>
     <script src="script.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'933b5ab41eef4521',t:'MTc0NTIyMjQ5NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'936650f74ca8bd5e',t:'MTc0NTY3Mjk4NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
+</body>
 </html>
