Modified the image paths

--- a/public/Survey.html
+++ b/public/Survey.html
@@ -830,15 +830,15 @@
                 <p>Refer to these images for better clarity while filling out the next section.</p>
                 <div class="unit-images-container">
                     <div class="unit-image">
-                        <img src="public/images/cup.jpeg" alt="Cup Reference" class="reference-image">
+                        <img src="images/cup.jpeg" alt="Cup Reference" class="reference-image">
                         <p>Cup(s)</p>
                     </div>
                     <div class="unit-image">
-                        <img src="public/images/spoons.jpeg" alt="Tablespoon Reference" class="reference-image">
+                        <img src="images/spoons.jpeg" alt="Tablespoon Reference" class="reference-image">
                         <p>Tablespoon(s)</p>
                     </div>
                     <div class="unit-image">
-                        <img src="public/images/glass.jpeg" alt="Small Glass Reference" class="reference-image">
+                        <img src="images/glass.jpeg" alt="Small Glass Reference" class="reference-image">
                         <p>Small Glass(es)</p>
                     </div>
                 </div>
